--- a/The_Mochi/The_Mochi/app/src/main/res/layout/activity_adduser.xml
+++ b/The_Mochi/The_Mochi/app/src/main/res/layout/activity_adduser.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".adduser"
-    android:background="@color/background_clr">
+    android:background="@color/shadow">
 
     <ListView
         android:id="@+id/listviews"
@@ -13,27 +13,15 @@
         android:layout_height="match_parent"
         android:layout_above="@+id/addmochi">
     </ListView>
+
     <Button
         android:id="@+id/addmochi"
         android:layout_width="284dp"
-        android:layout_height="wrap_content"
-        android:layout_above="@+id/Signout"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="5dp"
-        android:background="@drawable/buttonstyle2"
-        android:textColor="@color/txtclr"
-        android:text="Add User/व्यवसाय जोड़ें"
-        android:textSize="20sp" />
-
-    <Button
-        android:id="@+id/Signout"
-        android:layout_width="152dp"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="5dp"
         android:background="@drawable/buttonstyle2"
-        android:text="SIGN OUT/साइन आउट"
-        android:textColor="@color/txtclr"
-        android:textSize="14sp" />
+        android:text="Add User"
+        android:textSize="20sp" />
 </RelativeLayout>
